samples/_failures_safe/1761543184_52be30_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_b7ea21ed.c: In function ‘main’:
./samples/SAFE/__tmp_b7ea21ed.c:151:5: error: ‘print’ undeclared (first use in this function); did you mean ‘printf’?
  151 |     print
      |     ^~~~~
      |     printf
./samples/SAFE/__tmp_b7ea21ed.c:151:5: note: each undeclared identifier is reported only once for each function it appears in
./samples/SAFE/__tmp_b7ea21ed.c:151:10: error: expected ‘;’ at end of input
  151 |     print
      |          ^
      |          ;
./samples/SAFE/__tmp_b7ea21ed.c:151:5: error: expected declaration or statement at end of input
  151 |     print
      |     ^~~~~
